--- a/styles/style.scss
+++ b/styles/style.scss
@@ -58,7 +58,7 @@ ul{
     background-color: $pale-orange;
     position: fixed;
     top:0;
-    left:-300px;
+    left:-60%;
     z-index: 3;
     height: 100vh;
     width: 60%;
@@ -97,7 +97,7 @@ header{
     position: fixed;
     top:0;
     left:0;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     background-color: $pale-orange;
     display: flex;
@@ -178,7 +178,6 @@ header{
         padding: 1.3rem;
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
         .cart-content{
             margin-top: 3rem;
             width: 100%;
@@ -289,12 +288,16 @@ header{
                 overflow: hidden;
                 .main-img{
                     width: 100%;
-                    opacity: 0;
-                    animation: change-image 400ms ease forwards;
+                    opacity: 0.2;
+                    display: none;
+                    animation: change-image 800ms ease forwards;
                     transition: 500ms ease;
                     &:hover{
                         cursor: pointer;
                     }
+                }
+                .main-img.active{
+                    display: block;
                 }
             }
             .image-list2{
@@ -386,6 +389,7 @@ header{
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                z-index: 1;
                 .button{
                     &:hover{
                         cursor: pointer;
@@ -401,12 +405,19 @@ header{
                 right:1rem;
                 top:50%;
             }
+            
             .main-img{
                 width: 100%;
+                opacity: 0.3;
                 transition: 500ms ease;
+                animation: change-image 1s ease forwards;
+                display: none;
                 &:hover{
                     cursor: pointer;
                 }
+            }
+            .main-img.active{
+                display: block;
             }
             .selected-image-main{
                 display:flex;
