--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background-color: hsl(25deg, 100%, 94%);
+  background-color: hsl(0deg, 0%, 100%);
 }
 
 p, ul {
@@ -19,11 +19,12 @@ p, ul {
   font-weight: 400;
 }
 
-h1, h3 {
+h1, h2 {
   color: hsl(220deg, 13%, 13%);
 }
 
-h4 {
+h3, h4 {
+  font-size: 1.1rem;
   color: hsl(26deg, 100%, 55%);
 }
 
@@ -55,7 +56,7 @@ ul {
 }
 .mobile-menu {
   display: none;
-  background-color: hsl(25deg, 100%, 94%);
+  background-color: hsl(0deg, 0%, 100%);
   position: fixed;
   top: 0;
   left: -60%;
@@ -104,7 +105,7 @@ header {
   left: 0;
   z-index: 2;
   width: 100%;
-  background-color: hsl(25deg, 100%, 94%);
+  background-color: hsl(0deg, 0%, 100%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -176,7 +177,7 @@ header .cart-content-wrapper {
   left: 0;
   right: 0;
   opacity: 0;
-  background-color: hsl(25deg, 100%, 94%);
+  background-color: hsl(0deg, 0%, 100%);
   margin-inline: 0.5rem;
   padding: 1.3rem;
   border-radius: 10px;
@@ -350,7 +351,7 @@ header .cart-content-wrapper .cart-content .product-checkout .checkout-btn:hover
   justify-content: center;
   align-items: center;
   top: 30%;
-  background-color: hsl(25deg, 100%, 94%);
+  background-color: hsl(0deg, 0%, 100%);
   border-radius: 50%;
   position: absolute;
   width: 2.5rem;
@@ -382,7 +383,7 @@ header .cart-content-wrapper .cart-content .product-checkout .checkout-btn:hover
   filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
 }
 .main-content .thumbnail-wrapper .main-thumbnail .btn-wrapper {
-  background-color: hsl(25deg, 100%, 94%);
+  background-color: hsl(0deg, 0%, 100%);
   border-radius: 50%;
   position: absolute;
   width: 2.5rem;
@@ -436,7 +437,7 @@ header .cart-content-wrapper .cart-content .product-checkout .checkout-btn:hover
 .main-content .desc-wrapper .product-name {
   margin: 1rem 0;
   font-weight: 700;
-  font-size: 1.8rem;
+  font-size: 2rem;
   line-height: 2rem;
 }
 .main-content .desc-wrapper .product-desc {
@@ -643,22 +644,29 @@ header .cart-content-wrapper .cart-content .product-checkout .checkout-btn:hover
   .main-content .desc-wrapper {
     flex-basis: 45%;
   }
+  .main-content .desc-wrapper .product-name {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
   .main-content .desc-wrapper .price-wrapper {
     display: block;
   }
   .main-content .desc-wrapper .price-wrapper .sale-price {
     justify-content: flex-start;
   }
-  .main-content .desc-wrapper .price-wrapper .sale-price .discount {
-    margin-left: 2rem;
-  }
   .main-content .desc-wrapper .price-wrapper .default-price {
     margin: 0.5rem 0;
+  }
+  .main-content .desc-wrapper .price-wrapper .discount {
+    margin-left: 1rem;
   }
   .main-content .desc-wrapper .cart-add-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+  .main-content .desc-wrapper .cart-add-wrapper .quantity-wrapper {
+    flex-basis: 70%;
   }
   .main-content .desc-wrapper .cart-add-wrapper button {
     margin: 0;
